Home Page Traducida completa

--- a/index.html
+++ b/index.html
@@ -918,10 +918,10 @@
 			<div class="row align-items-center" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-6">
 					<div class="section-title">
-						<h5>ABOUT US</h5>
-						<h1>We Are Development Expert</h1>
-						<h1>on all IT <span>Solution</span></h1>
-						<p>At BeInCloud, we are a team of tech creatives passionate about driving 
+						<h5 data-translate="about">ABOUT US</h5>
+						<h1 data-translate="wearedevelopmentexpert">We are experts developing</h1>
+						<h1 data-translate="onallIT">IT <span>Solutions</span></h1>
+						<p data-translate="atbeincloud">At BeInCloud, we are a team of tech creatives passionate about driving 
 							innovation and digital transformation. With expertise in custom
 							 solutions and professional services, we empower businesses to 
 							 thrive in the digital age by embracing cutting-edge technology.</p>
@@ -931,8 +931,8 @@
 							<img src="assets/images/resource/icon.png" alt="icon">
 						</div>
 						<div class="about-text">
-							<h4>Global Solutions</h4>
-							<p>We drive seamless global services, ensuring that businesses across the world benefit from our tailored,
+							<h4 data-translate="globalsolutions">Global Solutions</h4>
+							<p data-translate="wedriveseamless">We drive seamless global services, ensuring that businesses across the world benefit from our tailored,
 								 innovative IT solutions designed to meet their unique needs.</p>
 						</div>
 					</div>
@@ -941,8 +941,8 @@
 							<img src="assets/images/resource/icon1.png" alt="icon">
 						</div>
 						<div class="about-text">
-							<h4>Innovative Technologies</h4>
-							<p>Empowering your business with cutting-edge solutions that enhance operational efficiency, 
+							<h4 data-translate="innovatetechnologies">Innovative Technologies</h4>
+							<p data-translate="empoweringyourbusiness">Empowering your business with cutting-edge solutions that enhance operational efficiency, 
 								leveraging cloud, automation, and agile methodologies for maximum impact..</p>
 						</div>
 					</div>
@@ -951,14 +951,14 @@
 							<img src="assets/images/resource/icon2.png" alt="icon">
 						</div>
 						<div class="about-text">
-							<h4>24/7 Dedicated Support</h4>
-							<p>Your success is our priority. Enjoy round-the-clock
+							<h4 data-translate="dedicatedsupport">24/7 Dedicated Support</h4>
+							<p data-translate="yoursucessis">Your success is our priority. Enjoy round-the-clock
 								 technical support, ensuring your systems run smoothly with minimal
 								  disruption.</p>
 						</div>
 					</div>
 					<div class="about-us-button">
-						<a href="contact-us.html">Get In Toutch</a>
+						<a href="contact-us.html" data-translate="getintoutch">Get In Toutch</a>
 					</div>
 				</div>
 				<div class="col-lg-6">
