--- a/services-details.html
+++ b/services-details.html
@@ -378,7 +378,7 @@
 							<h3>Main Services</h3>
 						</div>
 						<div class="widget-sidebar-menu">
-							<ul><li><a href="#">Cloud Migration and Scalability Solutions <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="cloud-migratios-services.html">Cloud Migration and Scalability Solutions <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 							<ul><li><a href="#">Process Automation for Operational Efficiency<span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 							<ul><li><a href="#">Mobile Application for Fleet and Logistics Tracking <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 							<ul><li><a href="#">Web Platform for Online Sales <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
