--- a/services-details.html
+++ b/services-details.html
@@ -378,15 +378,15 @@
 							<h3>Main Services</h3>
 						</div>
 						<div class="widget-sidebar-menu">
-							<ul><li><a href="cloud-migratios-services.html">Cloud Migration and Scalability Solutions <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">Process Automation for Operational Efficiency<span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">Mobile Application for Fleet and Logistics Tracking <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">Web Platform for Online Sales <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">Cloud Financial and Inventory Optimization <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">Employee Training Streaming Platform <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">AI-Powered Demand Forecasting <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">Real-Time Sales Tracking System <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">Quality Assurance Automation <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="cloud-migratios-services.html">CLOUD SOLUTIONS <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="mobile-applications-service.html">MOBILE APPLICATIONS<span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="finops-services-descriptions.html">FinOps <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="process-digitalization-services.html">PROCESS DIGITALIZATION <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="#">WEB PLATFORM DEVELOPMENT <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="#">AUGMENTED REALITY <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="#">TRAINING PLATFORMS <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="#">AI <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="#">AUTOMATION <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 						
 						</div>
 					</div>
