--- a/services.html
+++ b/services.html
@@ -288,9 +288,9 @@
 						</div>
 				
 						<div class="service-content">
-							<h4 data-translate="customweb">Cloud Migration and Scalability Solutions</h4>
-							<p data-translate="tailormade">This involves moving an organization's digital assets, services, 
-								and applications to the cloud using platforms like AWS. </p>
+							<h4 data-translate="customweb">CLOUD SOLUTIONS</h4>
+							<p data-translate="tailormade">Implementation of cloud solutions to enhance the 
+								efficiency and scalability of infrastructure. </p>
 							<div class="service-button">
 								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
@@ -304,9 +304,9 @@
 							<img src="assets/images/resource/service-icon1.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4 data-translate="clouservices">Process Automation for Operational Efficiency</h4>
-							<p data-translate="cloudmigration">Implementing automated workflows 
-								to replace manual tasks across different departments</p>
+							<h4 data-translate="clouservices">MOBILE APPLICATIONS</h4>
+							<p data-translate="cloudmigration">Creation of mobile applications to optimize 
+								logistics tracking and management.</p>
 								
 							<div class="service-button">
 								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
@@ -320,9 +320,8 @@
 							<img src="assets/images/resource/service-icon2.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4 data-translate="developmentconsultancy">Mobile Application for Fleet and Logistics Tracking</h4>
-							<p data-translate="technologyadvisor">Developing a mobile application that allows real-time tracking of fleet vehicles,
-								 providing logistics managers with instant data on location</p>
+							<h4 data-translate="developmentconsultancy">FinOps</h4>
+							<p data-translate="technologyadvisor">Strategies to optimize cloud costs through advanced financial practices.</p>
 
 							<div class="service-button">
 								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
@@ -338,9 +337,9 @@
 							<img src="assets/images/resource/counter-icon2.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4 data-translate="webplatform">Web Platform for Online Sales</h4>
-							<p data-translate="creationof">Creation of a user-friendly web application
-								tailored for the sales of used vehicles</p>
+							<h4 data-translate="webplatform">PROCESS DIGITALIZATION</h4>
+							<p data-translate="creationof">Digitalization of processes to streamline operations and 
+								reduce manual tasks across various business areas.</p>
 
 							<div class="service-button">
 								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
@@ -354,9 +353,9 @@
 							<img src="assets/images/resource/counter-icon.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4 data-translate="cloudfinancial">Cloud Financial and Inventory Optimization</h4>
-							<p data-translate="utilizingfinops">Utilizing FinOps principles to monitor cloud spending and developing 
-								a system to manage inventory levels for auto agencies</p>
+							<h4 data-translate="cloudfinancial">WEB PLATFORM DEVELOPMENT</h4>
+							<p data-translate="utilizingfinops">Development of web platforms to support the 
+								commercialization of products.</p>
 
 							<div class="service-button">
 								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
@@ -370,9 +369,9 @@
 							<img src="assets/images/resource/counter-icon3.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4 data-translate="employess">Employee Training Streaming Platform</h4>
-							<p data-translate="settingup">Setting up a streaming platform that enables remote 
-								employee training, making it possible to reach a larger audience.</p>
+							<h4 data-translate="employess">AUGMENTED REALITY</h4>
+							<p data-translate="settingup">STechnology that integrates digital elements into the physical environment,
+								 enhancing user experience with real-time interactive information.</p>
 
 							<div class="service-button">
 								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
@@ -388,9 +387,8 @@
 							<img src="assets/images/resource/counter-icon2.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4 data-translate="comprehensivesolutions">AI-Powered Demand Forecasting</h4>
-							<p data-translate="endtoend">Leveraging machine learning models 
-								to predict vehicle demand based on historical data,</p>
+							<h4 data-translate="comprehensivesolutions">TRAINING PLATFORMS</h4>
+							<p data-translate="endtoend">Development of virtual training platforms for employee education.</p>
 
 							<div class="service-button">
 								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
@@ -404,9 +402,9 @@
 							<img src="assets/images/resource/counter-icon.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4 data-translate="webapplication">Real-Time Sales Tracking System</h4>
-							<p data-translate="scalablefullstack">Developing a system that provides real-time
-								insights into sales and performance data for auto agencies</p>
+							<h4 data-translate="webapplication">AI</h4>
+							<p data-translate="scalablefullstack">Use of artificial intelligence to optimize 
+								storage and anticipate demand.</p>
 
 							<div class="service-button">
 								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
@@ -420,9 +418,8 @@
 							<img src="assets/images/resource/counter-icon3.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4 data-translate="scaledagility">Quality Assurance Automation</h4>
-							<p data-translate="agileframeworks">Implementing automated testing processes
-								 to improve the quality and reliability of software</p>
+							<h4 data-translate="scaledagility">AUTOMATION</h4>
+							<p data-translate="agileframeworks">Optimization of quality processes through automation.</p>
 							<div class="service-button">
 								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
