--- a/services-details.html
+++ b/services-details.html
@@ -382,11 +382,11 @@
 							<ul><li><a href="mobile-applications-service.html">MOBILE APPLICATIONS<span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 							<ul><li><a href="finops-services-descriptions.html">FinOps <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 							<ul><li><a href="process-digitalization-services.html">PROCESS DIGITALIZATION <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">WEB PLATFORM DEVELOPMENT <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">AUGMENTED REALITY <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">TRAINING PLATFORMS <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">AI <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="#">AUTOMATION <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="web-plataform-development-services.html">WEB PLATAFORM DEVELOPMENT <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="augmented-reality-services.html">AUGMENTED REALITY <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="training-plataforms-services.html">TRAINING PLATAFORMS <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="AI-services.html">ARTIFICIAL INTELLIGENCE (AI) <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="automation-services.html">AUTOMATION <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 						
 						</div>
 					</div>
