--- a/services.html
+++ b/services.html
@@ -292,7 +292,7 @@
 							<p data-translate="tailormade">Implementation of cloud solutions to enhance the 
 								efficiency and scalability of infrastructure. </p>
 							<div class="service-button">
-								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="cloud-migratios-services.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>			
 					</div>
