--- a/services-details.html
+++ b/services-details.html
@@ -135,18 +135,7 @@
 									<li><a href="blog-details.html">Blog Details</a></li>
 								</ul>
 							</li>
-							<!--<li><a href="index.html">Pages <span><i class="fas fa-plus"></i></span></a>
-								<ul class="sub-menu">
-									<li><a href="about.html">About</a></li>
-									<li><a href="services.html">Services</a></li>
-									<li><a href="services-details.html">Services Details</a></li>
-									<li><a href="team.html">Team</a></li>
-									<li><a href="testimonial.html">Testimonial</a></li>
-									<li><a href="portfolio.html">Portfolio</a></li>
-									<li><a href="pricing.html">pricing</a></li>
-									<li><a href="contact-us.html">Contace Us</a></li>
-								</ul>
-							</li>-->
+							
 							<li><a href="contact-us.html">Contact Us</a></li>
 						</ul>
 						<!-- headerm search button -->
@@ -192,23 +181,17 @@
 							<li><a href="portfolio-details.html">Portfolio Details</a></li>
 						</ul>
 					</li>
-					<li><a href="index.html">Blog <span><i class="fas fa-plus"></i></span></a>
+				<!--	<li><a href="index.html">Blog <span><i class="fas fa-plus"></i></span></a>
 						<ul class="sub-menu">
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="blog-list.html">Blog List</a></li>
-							<li><a href="blog-2column.html">Blog 2Column</a></li>
-							<li><a href="blog-details.html">Blog Details</a></li>
+							<li><a href="blog.html">Blog</a></li>-->
+							
 						</ul>
 					</li>
 					<li><a href="index.html">Pages <span><i class="fas fa-plus"></i></span></a>
 						<ul class="sub-menu">
 							<li><a href="about.html">About</a></li>
-							<li><a href="services.html">Services</a></li>
-							<li><a href="services-details.html">Services Details</a></li>
-							<li><a href="team.html">Team</a></li>
-							<li><a href="testimonial.html">Testimonial</a></li>
-							<li><a href="portfolio.html">Portfolio</a></li>
-							<li><a href="pricing.html">pricing</a></li>
+							<li><a href="service-tree.html">Services</a></li>
+							<li><a href="service-tree.html">Services Details</a></li>
 							<li><a href="contact-us.html">Contace Us</a></li>
 						</ul>
 					</li>
@@ -238,7 +221,7 @@
 							<h1>Services Details</h1>
 						</div>
 						<ul>
-							<li><a href="index.html"></a></li>
+							<li><a href="service-tree.html"></a></li>
 							<li>/</li>
 							<li><span></span></li>
 						</ul>
@@ -378,9 +361,9 @@
 							<h3>Main Services</h3>
 						</div>
 						<div class="widget-sidebar-menu">
-							<ul><li><a href="cloud-migratios-services.html">CLOUD SOLUTIONS <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="mobile-applications-service.html">MOBILE APPLICATIONS<span><i class="bi bi-chevron-right"></i></span></a></li></ul>
-							<ul><li><a href="finops-services-descriptions.html">FinOps <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="service-tree.html">CLOUD SOLUTIONS <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="service-tree.html">MOBILE APPLICATIONS<span><i class="bi bi-chevron-right"></i></span></a></li></ul>
+							<ul><li><a href="service-tree.html">FinOps <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 							<ul><li><a href="process-digitalization-services.html">PROCESS DIGITALIZATION <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 							<ul><li><a href="web-plataform-development-services.html">WEB PLATAFORM DEVELOPMENT <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
 							<ul><li><a href="augmented-reality-services.html">AUGMENTED REALITY <span><i class="bi bi-chevron-right"></i></span></a></li></ul>
