--- a/index.html
+++ b/index.html
@@ -166,20 +166,15 @@
 							<li><a href="service-tree.html">Services Details</a></li>
 						</ul>
 					</li>
-					<li><a href="portfolio.html">Portfolio <span><i class="fas fa-plus"></i></span></a>
-						<ul class="sub-menu">
-							<li><a href="portfolio.html">Portfolio</a></li>
-							<li><a href="portfolio-details.html">Portfolio Details</a></li>
-						</ul>
-					</li>
-					<li><a href="index.html">Blog <span><i class="fas fa-plus"></i></span></a>
+					
+					<!--<li><a href="index.html">Blog <span><i class="fas fa-plus"></i></span></a>
 						<ul class="sub-menu">
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="blog-list.html">Blog List</a></li>
 							<li><a href="blog-2column.html">Blog 2Column</a></li>
 							<li><a href="blog-details.html">Blog Details</a></li>
 						</ul>
-					</li>
+					</li> -->
 					<li><a href="index.html">Pages <span><i class="fas fa-plus"></i></span></a>
 						<ul class="sub-menu">
 							<li><a href="about.html">About</a></li>
